--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "build:client": "npm run webpack -- --mode production",
     "build:server": "npm run knex -- migrate:latest",
     "lint": "eslint --ext .js,.jsx .",
+    "lint:fix": "eslint --fix --ext .js,.jsx .",
     "webpack": "webpack --config ./client/webpack.config.js",
     "knex": "knex --knexfile ./server/db/knexfile.js"
   },
@@ -27,7 +28,13 @@
     ],
     "plugins": [
       "@babel/plugin-proposal-class-properties",
-      "@babel/plugin-proposal-object-rest-spread"
+      "@babel/plugin-proposal-object-rest-spread",
+      [
+        "@babel/plugin-transform-runtime",
+        {
+          "regenerator": true
+        }
+      ]
     ]
   },
   "jest": {
@@ -45,6 +52,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "knex": "^0.21.12",
+    "lint": "^0.7.0",
     "nock": "^13.0.5",
     "pg": "^8.5.1",
     "superagent": "^6.1.0",
@@ -54,9 +62,11 @@
     "@babel/core": "^7.12.3",
     "@babel/plugin-proposal-class-properties": "^7.12.1",
     "@babel/plugin-proposal-object-rest-spread": "^7.12.1",
+    "@babel/plugin-transform-runtime": "^7.12.1",
     "@babel/preset-env": "^7.12.1",
     "@babel/preset-react": "^7.12.5",
     "@babel/register": "^7.12.1",
+    "@testing-library/react": "^11.2.2",
     "babel-loader": "^8.2.1",
     "css-loader": "^5.0.1",
     "enzyme": "^3.11.0",
@@ -65,8 +75,8 @@
     "eslint-config-eda": "0.1.4",
     "jest": "^26.6.3",
     "jsdom": "^16.4.0",
-    "nodemon": "^2.0.6",
     "mini-css-extract-plugin": "^1.3.1",
+    "nodemon": "^2.0.6",
     "npm-run-all": "^4.1.5",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
@@ -74,9 +84,9 @@
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "sqlite3": "^5.0.0",
     "sass": "^1.29.0",
     "sass-loader": "^10.1.0",
+    "sqlite3": "^5.0.0",
     "style-loader": "^2.0.0",
     "supertest": "^5.0.0",
     "webpack": "^4.44.2",
