--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     ]
   },
   "dependencies": {
+    "authenticare": "^0.4.7",
     "express": "^4.17.1",
     "knex": "^0.21.12",
     "nock": "^13.0.5",
