Started adding componenets and created migration and seed for users

--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "knex": "^0.21.12",
     "nock": "^13.0.5",
     "pg": "^8.5.1",
+    "styled-components": "^5.2.1",
     "superagent": "^6.1.0"
   },
   "devDependencies": {
@@ -64,6 +65,7 @@
     "@babel/preset-env": "^7.12.1",
     "@babel/preset-react": "^7.12.5",
     "@babel/register": "^7.12.1",
+    "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "babel-loader": "^8.2.1",
     "css-loader": "^5.0.1",
