--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "knex": "^0.21.12",
     "nock": "^13.0.5",
     "pg": "^8.5.1",
+    "react-router": "^5.2.0",
     "superagent": "^6.1.0"
   },
   "devDependencies": {
