--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
-  "name": "boilerplate-fullstack",
+  "name": "aihe-book",
   "version": "2.0.0",
   "main": "server/index.js",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/aihe-2020/aihe-book.git"
+  },
   "keywords": [
     "fullstack"
   ],
@@ -54,9 +58,8 @@
     "knex": "^0.21.12",
     "nock": "^13.0.5",
     "pg": "^8.5.1",
-    "styled-components": "^5.2.1",
-    "react-router": "^5.2.0",
-    "superagent": "^6.1.0"
+    "superagent": "^6.1.0",
+    "typescript": "^4.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
