--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "knex": "^0.21.12",
     "nock": "^13.0.5",
     "pg": "^8.5.1",
+    "react-chat-widget": "^3.0.5",
     "superagent": "^6.1.0",
     "typescript": "^4.1.2"
   },
