--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "lodash": "^4.17.20",
     "nock": "^13.0.5",
     "pg": "^8.5.1",
+    "react-window": "^1.8.6",
     "react-youtube": "^7.13.0",
     "superagent": "^6.1.0",
     "typescript": "^4.1.2"
